<resources>
    <string name="app_name">CL GK Ninja</string>
    <string name="under_development">Under development</string>
    <string name="dummy_title">Lorem Ipsum</string>
    <string name="dummy_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut a lorem magna. Donec faucibus justo risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut a lorem magna. Donec faucibus justo risus.</string>
    <string name="track_selection_title">Select tracks</string>
    <string name="shortcut_oflfine_text">Offline Videos</string>
    <string name="shortcut_notification_text">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="download_instruction_manual">Download Instruction Manual</string>
    <string name="access_mod">Can\'t access MOD? Download FAQ</string>
    <string name="test_instruction">Check the answer to each multiple-choice question, and click on the &quot; Submit Test &quot; button to submit the information.</string>
    <string name="exit_quiz">Are you sure that you want to exit the test?</string>
    <string name="take_tour">Take a tour to see how aspiration works. It should not take more than 2 minutes of your time.</string>
    <string name="forgot_text">Just share the Email Id associated with your aspiration.ai account. Shortly, you will be underway.</string>
    <string name="feedabck_content">Your feedback is valuable to us to bring to you better  resources in your quest to excel in career and life. Kindly help us to help you by giving us feedback.</string>
    <string name="pdpcontent">Welcome to CL\'s PDP Zone, a smarter tool to explore yourself. Track your PIs, B-School forms, mentor feedback, previous year\'s B-School experiences of CL Alumni, knowledge sessions and much more as you aim to ace your stage 2 process of B-School admissions. Unfold the knowledge tree!</string>
    <string name="help_id">Still no joy? just drop us a line at help@aspiration.ai.</string>
    <string name="who_am_header">The first question in most interviews is "Tell me something about yourself". Answering this question is all about self-introspection. Take these tests given below to get a 360 degree understanding of your self.</string>
    <string-array name="navigation_drawer_items_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="buffer_speed">
        <item>0.75x</item>
        <item>1x</item>
        <item>1.25x</item>
        <item>1.5x</item>
    </string-array>
    <string name="channel_name">Download</string>
    <string name="msg_check_internet_connection">Please check your internet connection!</string>
    <string name="msg_press_back_again_to_exit">Press BACK again to exit!</string>
    <string name="msg_enter_email">Please enter email</string>
    <string name="msg_enter_valid_email">Please enter valid email id</string>
    <string name="msg_enter_valid_mobile">Please enter valid mobile number</string>
    <string name="msg_enter_password">Please enter password</string>
    <string name="msg_invalid_password_length">Password should have 6 to 12 characters</string>
    <string name="txt_password">Password</string>
    <string name="txt_create_an_account">Not a member. Sign up</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_email">Username</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_forgot_username">Forgot Username?</string>
    <string name="txt_remember_me">Remember me</string>
    <string name="txt_games">GAMES</string>
    <string name="txt_tests">TESTS</string>
    <string name="txt_home">HOME</string>
    <string name="txt_video">VIDEOS</string>
    <string name="txt_profile">PROFILE</string>
    <string name="txt_log_in">LOG IN</string>
    <string name="txt_log_out">LOG OUT</string>
    <string name="txt_ninja_games">Ninja Games</string>
    <string name="txt_test">Tests</string>
    <string name="txt_videos">Videos</string>
    <string name="enrollment_detail">Enrollment Detail</string>
    <string name="personal_details">Personal Details</string>
    <string name="academic_profile">Academic Profile</string>
    <string name="payment_details">Payment Details</string>
    <string name="game_rules">Game Rules</string>
    <string name="all_rules">All Rules</string>
    <string name="title_academic_profile">Academic Profile</string>
    <string name="txt_notification_tab_1">Announcements</string>
    <string name="txt_notification_tab_2">Events</string>
    <string name="txt_academic_profile_tab_1">Workshops Sessions</string>
    <string name="txt_academic_profile_tab_2">Scheduled Classes</string>
    <string name="txt_amicus"> I am Amicus. I know a lot about B-Schools and the different entrance exams. I can also play games with you. I have been trained to converse with you in a natural way. You can also click on the suggested action prompts</string>
    <string name="txt_amicus_2">This chat bot has also been released for Amazon\'s Echo devices on the Alexa platform.</string>
    <string name="txt_amicus_3">Try the Alexa Skills on your phone now</string>
    <string name="txt_rankin_tab_1">Weekly</string>
    <string name="txt_rankin_tab_2">Monthly</string>
    <string name="txt_payment_detail_tab_1">Pay Online</string>
    <string name="txt_payment_detail_tab_2">Payment Details(Receipt)</string>
    <string name="txt_payment_detail_tab_3">PDC(Receipt)</string>
    <string name="txt_payment_detail">Payment Details</string>
    <string name="test_instruction_bottom">If an answer is currentlySelected for a question that is Marked for Review, the answer will be considered in the final evaluation.</string>
    <string name="txt_academic_detail">Academic Detail</string>
    <string name="txt_cat_attempt">CAT Attempt</string>
    <string name="txt_rankings">Vocab Ninja Rankings</string>
    <string name="txt_notification">Notification</string>
    <string name="msg_enter_full_name">Please enter full name</string>
    <string name="msg_enter_dob">Please enter date of birth</string>
    <string name="txt_grammar_zone_desc">Take GK test, check your Current Affairs prowess, Read Manthan our monthly current affairs.</string>
    <string-array name="arr_game_options">
        <item>GK Ninja</item>
        <item>Vocab Ninja</item>
    </string-array>
    <string-array name="arr_tests_options">
        <item>Topic Tests</item>
        <item>Sectional Tests</item>
        <item>Write Mocks</item>
    </string-array>
    <string-array name="arr_tests_options_civil">

        <item>Write Mocks</item>
    </string-array>
    <string-array name="mock_tests_options">

        <item>Write Mocks</item>
    </string-array>
    <string-array name="online_tests_options">
        <item>Online Tests</item>
    </string-array>
    <string-array name="arr_tests_options_engg">
        <item>Chapter Tests</item>
        <item>Write Mocks</item>
    </string-array>
    <string-array name="arr_tests_options_gate">
        <item>Topic Tests</item>
        <item>Subject Tests</item>
        <item>Full Length Tests</item>
        <item>Weekly Tests</item>
    </string-array>
    <string-array name="arr_tests_options_gmat">
        <item>Free Mocks</item>
        <item>Section Tests</item>
    </string-array>
    <string-array name="arr_tests_options_gre">
        <item>Topic Tests</item>
        <item>Section Tests</item>
    </string-array>
    <string-array name="arr_tests_options_frm">
        <item>Topic Tests</item>
        <item>Section Tests</item>
        <item>Write Mocks</item>
    </string-array>
    <string-array name="arr_select_course_options">
        <item>Crack MBA</item>
        <item>BANK</item>
        <item>SSC</item>
        <item>GATE</item>
        <item>GMAT</item>
        <item>GRE</item>
        <item>RBI</item>

    </string-array>
    <string-array name="arr_home_options">
        <item>GK Zone</item>
        <item>eBooks</item>
        <item>Tools</item>
        <item>Grammar Zone</item>
        <item>Amicus-AI BOT</item>
        <item>Compendium</item>
        <item>Management Compass</item>

        <item>Finance Articles</item>
        <item>Marketing Articles</item>
    </string-array>
    <string-array name="arr_parent_home_options">
        <item>Parent Quiz</item>
        <item>Happiness &amp; Parenting</item>
        <item>Self Development</item>

    </string-array>
    <string-array name="arr_video_options">
        <item>Funda Books</item>
        <item>CAT Day Classes</item>
        <item>Night Classes</item>
        <item>Webinar</item>
        <item>MBA on Demand</item>
    </string-array>
    <string-array name="arr_gk_zone_options">
        <item>Take the Daily GK Test</item>
        <item>Manthan Current Affairs</item>
        <item>Play the GK Ninja Game</item>
    </string-array>
    <string-array name="arr_e_books_options">
        <item>Quantitative Ability</item>
        <item>Verbal Activity</item>
        <item>DILR</item>
    </string-array>
    <string-array name="arr_tools_options">
        <item>MBA Profilizer</item>
        <item>B-School Ranking</item>
        <item>Exam Information</item>
        <item>Prev Year Paper</item>
        <item>Important Formulae</item>
        <item>My Classes</item>
    </string-array>
    <string-array name="arr_my_classes">
        <item>Session Plan</item>
        <item>Attendance</item>
        <item>Feedback</item>
    </string-array>
    <string-array name="arr_compendium_options">
        <item>General Awareness</item>
    </string-array>
    <string name="txt_algebra">Algebra is one of the broad parts of mathematics, together with number theory, geometry and analysis.</string>
    <string name="txt_b_skool_ranking">
         An excellent track record, high quality education and the pick of the corporates is what matters.\n\nCL\'s B-School Ranking To simplify your B-school selection we have categorized India\'s top B- schools into eight clusters. The list of B-school in India can go on forever, however, we have tried to limit our classification to the better and more known B-schools.
\n\nNote, as you proceed from the best to the also-rans, the level of differentiation between both the schools and the clusters significantly diminishes. When reviewing B-schools within a cluster, the preference generally diminishes as you read further from top to bottom. For example, in Cluster 1, we feel that IIM-A is the best B-school in India at present, followed by Bangalore, Kolkata and so on. In certain clusters, the differentiation on the quality of the institute is specialization-driven, and the top to bottom reading is not necessarily representative.\n\nBefore taking final admission into any of these B-schools, please ensure that you speak to some students of the current batch and a few of their alumni and visit the websites of the institutes for detailed information. Apart from these premier institutes, there are several other colleges that offer an MBA degree - if you want more details, please write to us at support@careerlauncher.com
     </string>
    <string name="txt_select_user_type_student_top">Individual account creation process for student</string>
    <string name="txt_select_user_type_student">
     1. Register yourself as a student\n2. Aspiration account is activated as per your age\n3. You can add your parent or siblings and activate accounts for each person
    </string>
    <string name="txt_select_user_type_parent_top">Individual account creation process for parent</string>
</resources>